update to reflect the current state-of-the-art practices